--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
         </nav>
     </header> *@
     <header>
-		<div class="topbar stick">
+		<div class="topbar">
 			<div class="logo">
 				<a title="" asp-page="/Index"><img src="images/logo.png" alt=""></a>
 			</div>
