--- a/final-project-fe/Pages/Admin/UserManager/BanUnban.cshtml
+++ b/final-project-fe/Pages/Admin/UserManager/BanUnban.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
 @model final_project_fe.Pages.Admin.UserManager.BanUnbanModel
 @{
+	ViewData["ActivePage"] = "UserManager";
 }
 <div class="page-header">
 	<h3 class="fw-bold mb-3">@(Model.User.IsBanned ? "Unban" : "Ban") User</h3>
 	<ul class="breadcrumbs mb-3">
 		<li class="nav-home">
-			<a href="#">
+			<a asp-page="/Admin/Dashboard/Index">
 				<i class="icon-home"></i>
 			</a>
 		</li>
