--- a/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
+++ b/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
@@ -21,7 +21,7 @@
             <i class="icon-arrow-right"></i>
         </li>
         <li class="nav-item">
-            <a asp-page="/Admin/UserManager/Detail" asp-route-userId="@Model.UserDetail.UserId">@Model.UserDetail.UserMetaData.FirstName @Model.UserDetail.UserMetaData.LastName</a>
+            <a>@(Model.UserDetail.UserMetaData.FirstName ?? "N/A") @(Model.UserDetail.UserMetaData.LastName ?? "N/A")</a>
         </li>
     </ul>
 </div>
@@ -35,7 +35,7 @@
                 @if (Model.UserDetail != null)
                 {
                     <div style="flex-basis: 30%; text-align: center;">
-                        <img src="@(Model.UserDetail.UserMetaData.Avatar)" style="max-width: 100%; height: 200px;" />
+                        <img src="@(Model.UserDetail.UserMetaData.Avatar ?? "https://denngocson.com/wp-content/uploads/2024/10/avatar-fb-mac-dinh-62lnfy8F.jpg")" style="max-width: 100%; height: 200px;" />
                         <p>
                             @if (Model.UserDetail.IsBanned == true)
                             {
@@ -49,13 +49,13 @@
                         <p><strong>Points:</strong> @Model.UserDetail.Point</p>
                     </div>
                     <div style="flex-basis: 70%;">
-                        <p><strong>Full Name:</strong> @Model.UserDetail.UserMetaData.FirstName @Model.UserDetail.UserMetaData.LastName</p>
+                        <p><strong>Full Name:</strong> @(Model.UserDetail.UserMetaData.FirstName ?? "N/A") @(Model.UserDetail.UserMetaData.LastName ?? "N/A")</p>
                         <p><strong>Email:</strong> @Model.UserDetail.Email</p>
                         <p><strong>Phone:</strong> @Model.UserDetail.Phone</p>
-                        <p><strong>Created At:</strong> @Model.UserDetail.CreateAt.ToString("yyyy-MM-dd HH:mm")</p>
-                        <p><strong>Birthday:</strong> @(Model.UserDetail.UserMetaData.Birthday)</p>
+                        <p><strong>Created At:</strong> @Model.UserDetail.CreateAt.ToString("dd/MM/yyyy HH:mm")</p>
+                        <p><strong>Birthday:</strong> @(Model.UserDetail.UserMetaData.Birthday?.ToString("dd/MM/yyyy") ?? "0001-01-01")</p>
                         <p><strong>Gender:</strong> @Model.UserDetail.UserMetaData.Gender</p>
-                        <p><strong>Address:</strong> @Model.UserDetail.UserMetaData.Address</p>
+                        <p><strong>Address:</strong> @(Model.UserDetail.UserMetaData.Address ?? "None")</p>
                     </div>
                 }
                 else
@@ -68,4 +68,6 @@
 </div>
 
 
-<a asp-page="/Admin/UserManager/Index" class="btn btn-secondary mt-3">Back to List</a>
+<a href="@Model.ReturnUrl" class="btn btn-secondary mt-3">
+    <i class="bi bi-arrow-left"></i> Back
+</a>
