--- a/final-project-fe/Pages/Admin/PostManager/Detail.cshtml
+++ b/final-project-fe/Pages/Admin/PostManager/Detail.cshtml
@@ -52,7 +52,7 @@
         <div class="post-content mb-4">
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h4 class="fw-bold">@Model.Post.Title</h4>
-                <span class="badge bg-primary">@Model.SubCategory?.Title</span>
+                <span class="badge bg-primary">@Model.Category?.Title</span>
             </div>
             <div class="post-body bg-light p-3 rounded mb-3">
                 @Model.Post.Content
