--- a/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
+++ b/final-project-fe/Pages/Admin/UserManager/Detail.cshtml
@@ -68,6 +68,6 @@
 </div>
 
 
-<a href="@Model.ReturnUrl" class="btn btn-secondary mt-3">
-    <i class="bi bi-arrow-left"></i> Back
-</a>
+<form method="post">
+    <button type="submit" asp-page-handler="Back">Back</button>
+</form>
