--- a/final-project-fe/Pages/Admin/ReportManager/CommentsReport/Index.cshtml
+++ b/final-project-fe/Pages/Admin/ReportManager/CommentsReport/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["ActivePage"] = "ReportManager.Comments";
 }
 <div class="page-header">
-    <h3 class="fw-bold mb-3">User Manager</h3>
+    <h3 class="fw-bold mb-3">Comments Manager</h3>
     <ul class="breadcrumbs mb-3">
         <li class="nav-home">
             <a asp-page="/Admin/Dashboard/Index">
